# learning_opengl

./: .gitignore  CMakeLists.txt  readme.md
include/: EBO.h  VAO.h  VBO.h  lib.h  shaders.h  texture.h
include/glad/: glad.h
resources/shaders/: shader.frag  shader.vert  uniform.frag
src/: EBO.c  VAO.c  VBO.c  glad.c  lib.c  main.c  shaders.c  texture.c
